<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="playlist_maker">Playlist Maker</string>
    <string name="search_text">Поиск</string>
    <string name="library_text">Медиатека</string>
    <string name="settings_text">Настройки</string>
    <string name="settings_title">Настройки</string>
    <string name="theme_switch">Тёмная тема</string>
    <string name="share_app_text">Поделиться приложением</string>
    <string name="support_text">Написать в поддержку</string>
    <string name="user_lic_text">Пользовательское соглашение</string>
</resources>