<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <TextView
        android:padding="@dimen/big_padding"
        android:text="@string/playlist_maker"
        android:textSize="@dimen/primary_text_size"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


    <Button
        android:id="@+id/search_button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="@dimen/small_padding"
        android:layout_marginLeft="@dimen/big_padding"
        android:layout_marginRight="@dimen/big_padding"
        android:layout_marginBottom="@dimen/small_padding"
        android:backgroundTint="@color/white"
        android:textColor="@color/text_icon_color"
        android:textStyle="bold"
        android:text="@string/search_text"
        android:textAllCaps="false"
        android:textSize="@dimen/primary_text_size"
        android:gravity="center"
        app:icon="@drawable/search"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/medium_padding"
        app:iconTint="@color/text_icon_color"
        app:cornerRadius="@dimen/btn_radius"/>

    <Button
        android:id="@+id/library_button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="@dimen/small_padding"
        android:layout_marginLeft="@dimen/big_padding"
        android:layout_marginRight="@dimen/big_padding"
        android:layout_marginBottom="@dimen/small_padding"
        android:backgroundTint="@color/white"
        android:textColor="@color/text_icon_color"
        android:textStyle="bold"
        android:text="@string/library_text"
        android:textAllCaps="false"
        android:textSize="@dimen/primary_text_size"
        android:gravity="center"
        app:icon="@drawable/library"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/medium_padding"
        app:iconTint="@color/text_icon_color"
        app:cornerRadius="@dimen/btn_radius"/>

    <Button
        android:id="@+id/settings_button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="@dimen/small_padding"
        android:layout_marginLeft="@dimen/big_padding"
        android:layout_marginRight="@dimen/big_padding"
        android:layout_marginBottom="@dimen/small_padding"
        android:backgroundTint="@color/white"
        android:textColor="@color/text_icon_color"
        android:textStyle="bold"
        android:text="@string/settings_text"
        android:textAllCaps="false"
        android:textSize="@dimen/primary_text_size"
        android:gravity="center"
        app:icon="@drawable/settings"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/medium_padding"
        app:iconTint="@color/text_icon_color"
        app:cornerRadius="@dimen/btn_radius"/>
</LinearLayout>